--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Afgange – AAU Fibigerstræde</title>
   <style>
-    body { margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; background:#0b1220; color:#e8eefc; }
-    header { padding: 14px 16px; border-bottom: 1px solid rgba(255,255,255,.12); display:flex; gap:12px; align-items:baseline; }
+    body { margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; background:#ffffff; color:#000000; }
+    header { padding: 14px 16px; border-bottom: 1px solid rgb(255, 255, 255); display:flex; gap:12px; align-items:baseline; }
     header .title { font-weight: 700; }
     header .meta { opacity: .7; font-size: 13px; }
 
@@ -21,7 +21,7 @@
 
     border-radius: 16px;
     box-shadow: 0 10px 30px rgba(255, 255, 255, 0.35);
-    border: 1px solid rgba(255,255,255,.12);
+    border: 1px solid rgb(255, 255, 255);
     background: #ffffff;
     position: relative;
     }
